Added banner section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -27,10 +27,30 @@
         </nav>
     </header>
 <!-- Header section ends here -->
+
+<!-- main section starts here -->
     <main>
-
+<!-- Banner section starts here -->
+        <section class="banner">
+            <div class="banner-container">
+                <h1 class="banner-title">Explore Your Travel</h1>
+                <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. <br>In et odio enim ac quis sapien urna eu phasellus.</p>
+                <br>
+                <form action="" class="banner-form">
+                    <input type="text"  placeholder="Where go">
+                    <select name="" id="">
+                        <option value="When">When</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="Select type">Select type</option>
+                    </select>
+                    <button class="btn"><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
+                </form>
+            </div>
+        </section>
+<!-- Banner section ends here -->
     </main>
-
+<!-- main section ends here -->
     <footer>
 
     </footer>
