Added destination section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -72,6 +72,51 @@
         </section>
 <!-- Popular section ends here -->
 
+<!-- Destination section starts here -->
+        <section class="destination">
+            <h3 class="center-title">Choose Your Destination</h3>
+            <p class="center-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.<br>  Sodales dictumst nec nibh pellentesque.Sodales dictumst nec nibh pellentesque.</p>
+            <br><br>
+
+            <div class="row-1">
+                <div class="country-card">
+                    <img src="images/card-1.png" alt="" class="country-img">
+                    <h4 class="country-name">Maldives</h4>
+                </div>
+                <div class="country-card">
+                    <img src="images/card-2.png" alt="" class="country-img">
+                    <h4 class="country-name">Indonesia</h4>
+                </div>
+            </div>
+            <br>
+            <div class="row-2">
+                <div class="country-card">
+                    <img src="images/card-3.png" alt="" class="country-img">
+                    <h4 class="country-name">Sri Lanka</h4>
+                </div>
+                <div class="country-card">
+                    <img src="images/card-4.png" alt="" class="country-img">
+                    <h4 class="country-name">North America</h4>
+                </div>
+                <div class="country-card">
+                    <img src="images/card-5.png" alt="" class="country-img">
+                    <h4 class="country-name">Kashmir</h4>
+                </div>
+            </div>
+            <br>
+            <div class="row-3">
+                <div class="country-card">
+                    <img src="images/card-6.png" alt="" class="country-img">
+                    <h4 class="country-name">Bangladesh</h4>
+                </div>
+                <div class="country-card">
+                    <img src="images/card-7.png" alt="" class="country-img">
+                    <h4 class="country-name">Bandarban</h4>
+                </div>
+            </div>
+
+        </section>
+<!-- Destination section ends here -->
 
     </main>
 <!-- main section ends here -->
