Added choose section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -118,6 +118,36 @@
         </section>
 <!-- Destination section ends here -->
 
+<!-- Choose section starts here -->
+        <section>
+            <div class="choose">
+                <h3 class="center-title">Why Choose Me</h3>
+                <p class="center-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.<br>  Sodales dictumst nec nibh pellentesque.Sodales dictumst nec nibh pellentesque.</p>
+                <br><br>
+                <div class="choose-row-1">
+                    <div class="choose-card" id="choose-card-1">
+                    <img src="images/hotel.png" alt="">
+                    <h4 class="choose-card-title">Handpicked Hotels</h4>
+                    <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                    <div class="choose-card" id="choose-card-2">
+                    <img src="images/service.png" alt="">
+                    <h4 class="choose-card-title">World Class Service</h4>
+                    <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                </div>
+                <div class="choose-row-2">
+                    <div class="choose-card" id="choose-card-3">
+                    <img src="images/label.png" alt="">
+                    <h4 class="choose-card-title">Best Price Guarantee</h4>
+                    <p class="choose-card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+<!-- Choose section ends here -->
+
     </main>
 <!-- main section ends here -->
     <footer>
