Added discount section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -148,6 +148,104 @@
         </section>
 <!-- Choose section ends here -->
 
+<!-- Discount section starts here -->
+        <section>
+            <div class="discount">
+                <h3 class="center-title">Deals & Discounts</h3>
+                <p class="center-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.<br>  Sodales dictumst nec nibh pellentesque.Sodales dictumst nec nibh pellentesque.</p>
+                <br><br>
+
+                <div class="discount-container">
+
+                    <div class="discount-content">
+                        <div class="discount-sub-heading-container">
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-clock discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">7 Day / 6 Night</p>
+                            </div>
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-user-group discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">Max : 10</p>
+                            </div>
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-location-dot discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">Malaysia</p>
+                            </div>
+                        </div>
+
+                        <div class="discount-content-main">
+                            <h4 class="disconunt-title">Tour To Satorini</h4>
+                        <p class="content-description">Amet consectetur. Vulputate commodo felis 
+                            molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <h5 class="content-price">Price: $1300-$1500</h5>
+                        <button class="btn">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="discount-container" id="discount-container-2">
+
+                    <div class="discount-content" id="discount-content-2">
+                        <div class="discount-sub-heading-container">
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-clock discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">7 Day / 6 Night</p>
+                            </div>
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-user-group discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">Max : 10</p>
+                            </div>
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-location-dot discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">Malaysia</p>
+                            </div>
+                        </div>
+
+                        <div class="discount-content-main">
+                            <h4 class="disconunt-title">Tour To Satorini</h4>
+                        <p class="content-description">Amet consectetur. Vulputate commodo felis 
+                            molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <h5 class="content-price">Price: $1300-$1500</h5>
+                        <button class="btn">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="discount-container">
+
+                    <div class="discount-content">
+                        <div class="discount-sub-heading-container">
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-clock discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">7 Day / 6 Night</p>
+                            </div>
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-user-group discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">Max : 10</p>
+                            </div>
+                            <div class="discount-sub-heading-content">
+                                <i class="fa-solid fa-location-dot discount-icon"></i>
+                                <p class="discount-sub-heading-content-title">Malaysia</p>
+                            </div>
+                        </div>
+
+                        <div class="discount-content-main">
+                            <h4 class="disconunt-title">Tour To Satorini</h4>
+                        <p class="content-description">Amet consectetur. Vulputate commodo felis 
+                            molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <h5 class="content-price">Price: $1300-$1500</h5>
+                        <button class="btn">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div id="discount-btn">
+                    <button class="btn">See All Packages</button>
+                </div>
+
+            </div>
+        </section>
+<!-- Discount section ends here -->
+
+
+
     </main>
 <!-- main section ends here -->
     <footer>
