Added perfect place section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -244,7 +244,24 @@
         </section>
 <!-- Discount section ends here -->
 
-
+<!-- Perfect place section starts here -->
+        <section>
+            <div class="perfect-place">
+                <div class="perfect-place-content">
+                    <h3 class="left-title perfect-place-title">A Simple Perfect Place <br>To Get Lost</h3>
+                    <p class="left-description perfect-place-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                    <ul class="Perfect-place-list">
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <br>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    </ul>
+                </div>
+                <div class="perfect-place-video">
+                    <iframe width="700" height="400px" src="https://www.youtube.com/embed/Z755vZBf9oM?si=u207HzUJN85GOTf-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+<!-- Perfect place section ends here -->
 
     </main>
 <!-- main section ends here -->
