--- a/index.html
+++ b/index.html
@@ -263,6 +263,26 @@
         </section>
 <!-- Perfect place section ends here -->
 
+<!-- Newsletter section starts here -->
+        <section>
+            <div class="newsletter">
+                <div class="newsletter-img">
+                    <img src="images/img-2.png" alt="">
+                </div>
+                <div class="newsletter-forms">
+                    <h4 class="newsletter-title">Newsletter</h4>
+                    <p class="newsletter-description">Get your daily dose of travel news & tips. Sign up today!</p>
+                    <br><hr><br><br>
+                    <form class="newsletter-form">
+                        <input type="text" name="" id="" placeholder="Your name:"><br><br>
+                        <input type="email" name="" id="" placeholder="Your email:"><br><br>
+                        <button class="btn">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+<!-- Newsletter section ends here -->
+
     </main>
 <!-- main section ends here -->
     <footer>
